# xTTS

./: README.md  pyproject.toml  setup.py
TTS/utils/: io.py
xTTS/: .models.json  api.py  model.py
xTTS/config/: __init__.py  shared_configs.py
xTTS/demos/xtts_ft_demo/: xtts_demo.py
xTTS/encoder/: dataset.py
xTTS/encoder/configs/: base_encoder_config.py  emotion_encoder_config.py  speaker_encoder_config.py
xTTS/encoder/models/: base_encoder.py  lstm.py  resnet.py
xTTS/encoder/utils/: generic_utils.py  training.py
xTTS/tts/configs/: align_tts_config.py  bark_config.py  delightful_tts_config.py  fast_pitch_config.py  fast_speech_config.py  fastspeech2_config.py  glow_tts_config.py  neuralhmm_tts_config.py  overflow_config.py  shared_configs.py  speedy_speech_config.py  tacotron2_config.py  tacotron_config.py  tortoise_config.py  vits_config.py  xtts_config.py
xTTS/tts/datasets/: __init__.py  dataset.py
xTTS/tts/layers/: __init__.py  losses.py
xTTS/tts/models/: __init__.py  align_tts.py  bark.py  base_tacotron.py  base_tts.py  delightful_tts.py  forward_tts.py  glow_tts.py  neuralhmm_tts.py  overflow.py  tacotron.py  tacotron2.py  tortoise.py  vits.py  xtts.py
xTTS/tts/utils/: helpers.py  languages.py  managers.py  speakers.py
xTTS/utils/: downloaders.py  io.py  manage.py  synthesizer.py
xTTS/utils/audio/: __init__.py  numpy_transforms.py  processor.py
xTTS/vc/configs/: freevc_config.py  shared_configs.py
xTTS/vc/models/: base_vc.py  freevc.py
xTTS/vocoder/configs/: fullband_melgan_config.py  hifigan_config.py  melgan_config.py  shared_configs.py  (+5 more)
(+82 files in other folders)
